# stylus-airdrop-key

./: Cargo.lock.stable  Cargo.toml  README.md  addresses.txt  generate_merkle.py  proof.json  requirements.txt
.cargo/: config.toml
src/: lib.rs  main.rs
