[package]
name = "airdrop_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
stylus-sdk = "=0.6.0"
alloy-primitives = { version = "=0.7.6", default-features = false }
alloy-sol-types = { version = "=0.7.6", default-features = false }
miniz_oxide = { version = "=0.7.4", default-features = false }

[profile.release]
codegen-units = 1
strip = true
lto = true
stack-protector = false
panic = "abort"